# testfactory

./: .gitignore  README.md  classfactory.h  customkey.cpp  customkey.h  go  machine.cpp  machine.h  makefile  methods.h  mutants.h  products.h  run  tbd.h  tests.cpp  tests.h
GraphAlgorithms/: .makefile.swp  graph.cpp  graph.h  makefile  utility.cpp  utility.h
Restful/: CMakeLists.txt  go
Restful/client/: main.cpp  restful.cpp
Restful/include/: restful.h
Restful/src/: CMakeLists.txt  go  main.cpp
Restful/src/client/: CMakeLists.txt  main.cpp  restful.cpp
Restful/src/include/: RequestDirectory.h  restful.h
SortingAlgorithms/: machine.cpp  mutants.h  products.h  tbd.h  tests.h
db/src/: CMakeLists.txt  informationkrunchers
db/src/include/: CMakeLists.txt  InfoBuild.h  InfoBuildEntry.h  RestInterface.h
db/src/infobuild/: CMakeLists.txt  InfoBuildFace.cpp  InfoLibData.cpp  LibCatalog.cpp  builderdata.cpp  marketdata.cpp
src/: CMakeLists.txt  Utilities.txt  go  infobuilder.vim  informationkrunchers  krunchers  postbuild  testfactory
src/client/: CMakeLists.txt  main.cpp  restful.cpp
src/include/: CMakeLists.txt  InfoBuild.h  directories.h  infobuilder.h  krbuildactors.h  krbuilder.h
src/infobuild/: CMakeLists.txt  InfoBuildFace.cpp  InfoLibData.cpp  LibCatalog.cpp  marketdata.cpp
src/krbuilder/: CMakeLists.txt  actors.cpp  buildservice.cpp  krbuildactors.cpp  krbuilder.cpp
src/server/: CMakeLists.txt  buildservice.cpp  main.cpp
src/text/: builder.xml  index.html  infobuilder.xml
utilities/: BashRc  Bdb.ksh  BeepTools.ksh  BuildTools.ksh  CTags.ksh  DevTools.ksh  GitTools.ksh  Setup.ksh  Status.ksh  bootstrap.ksh  chron.ksh
utilities/AutoMake2CMake/: .CreateManifest.ksh.swp  .go.swp  CMakeLists.txt  CreateCmakeMacros.cpp  CreateManifest.ksh  GetRecipe.ksh  cmakeizer.ksh  go  makefile
utilities/AutoMake2CMake/Templates/: Root.txt  Sub.txt
utilities/AutoMake2CMake/bdb/: KludgeBdb.ksh
utilities/AutoMake2CMake/src/: CMakeLists.txt  CreateCmakeMacros.cpp
utilities/src/: CMakeLists.txt  Utilities.txt  informationkrunchers  kruncher
utilities/vim/: KrBuilder.vim  krbuilder.vim
